--- a/css/styles.css
+++ b/css/styles.css
@@ -64,33 +64,55 @@ a {
   margin-left: 10px;
 }
 @media screen and (min-width: 1024px) {
-    
-}.link-arrow {
-    font-size: 1.5rem;
+}
+.link-arrow {
+  font-size: 1.5rem;
 }
 .badge {
-    border-radius: 20px;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 0.5rem 2rem;
-    white-space: nowrap;
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  white-space: nowrap;
 }
 .badge--primary {
-    background: var(--color-primary);
-    color: #fff;
+  background: var(--color-primary);
+  color: #fff;
 }
 .badge--secondary {
-    background: var(--color-secondary);
-    color: #fff;
+  background: var(--color-secondary);
+  color: #fff;
 }
 .badge--small {
-    font-size: 1.6rem;
+  font-size: 1.6rem;
 }
 @media screen and(min-width:1024px) {
-    .badge {
-        font-size: 1.5rem;
-    }
-    .badge--small {
-        font-size: 1.2rem;
-    }
+  .badge {
+    font-size: 1.5rem;
+  }
+  .badge--small {
+    font-size: 1.2rem;
+  }
+}
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+.list--tick {
+  list-style-image: url('../images/tick.svg');
+  padding-left: 3rem;
+}
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+@media screen and (min-width: 1024px){
+  .list--tick .list__item {
+    padding-left: 0;
+  }
 }
