--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ a {
   font-size: 2.4rem;
   font-weight: 300;
   opacity: 0.8;
-  margin-right: 1rem ;
+  margin-right: 1rem;
 }
 .plan__description {
   font-size: 2rem;
@@ -273,7 +273,18 @@ a {
 .plan .list__item {
   margin-bottom: 2rem;
 }
-@media screen and (min-width: 1024px){
+.plan--popular .card__header {
+  position: relative;
+}
+.plan--popular .card__header::before {
+  content: url("../images/popular.svg");
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+@media screen and (min-width: 1024px) {
   .plan__name {
     font-size: 1.4rem;
   }
