--- a/css/styles.css
+++ b/css/styles.css
@@ -200,8 +200,8 @@ a {
   color: #fff;
 }
 .btn--stretched {
-padding-left: 6rem;
-padding-right: 6rem
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 .btn--block {
   width: 100%;
@@ -384,7 +384,7 @@ padding-right: 6rem
 .testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
-  right:-32px;
+  right: -32px;
 }
 @media screen and (min-width: 768px) {
   .testimonial .quote,
@@ -396,27 +396,27 @@ padding-right: 6rem
   }
 }
 /* Callouts */
- .callout {
+.callout {
   padding: 4rem;
   border-radius: 5px;
- }
- .callout--primary {
+}
+.callout--primary {
   background: var(--color-primary);
   color: #fff;
- }
- .callout__heading {
+}
+.callout__heading {
   color: #fff;
   margin-top: 0;
   font-size: 3rem;
- }
- .callout .btn {
+}
+.callout .btn {
   justify-self: center;
   align-self: center;
- }
- .callout__content {
+}
+.callout__content {
   text-align: center;
- }
- @media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 768px) {
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
@@ -427,4 +427,30 @@ padding-right: 6rem
     justify-self: start;
     margin: 0 2rem;
   }
- }
+}
+/* Collapsibles */
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  transition: transform 0.3s;
+}
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+}
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+.collapsible--expanded .collapsible__content {
+  max-height: 100vh;
+  opacity: 1;
+}
