--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ body {
   line-height: 1.5;
   color: var(--color-body);
 }
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
 /* Headings */
 h1,
 h2,
@@ -453,4 +457,30 @@ a {
 .collapsible--expanded .collapsible__content {
   max-height: 100vh;
   opacity: 1;
+}
+/* Blocks */
+.block {
+  --padding-vertical: 6rem;
+  padding: --padding-vertical 2rem;
+}
+.block__heading {
+  margin-top: 0;
+}
+.block--dark {
+  background: #000;
+  color: #7b858b;
+}
+.block--dark .block__heading {
+  color: #fff;
+}
+.block--skewed-right {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 95%);
+}
+.block--skewed-left {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
+.block__header {
+  text-align: center;
 }
